static/css/styles.css
body {
  background: #000;
  min-height: 100vh;
  margin: 0;
  font-family: 'PT Sans', sans-serif;
}

h1,
.title-text {
  color: #5b5b5b;
  animation: profile-animation 3s;
}

/* #loading {
  position: fixed;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  opacity: 0.9;
  text-align: center;
  background-color: #000;
  z-index: 10000;
} */

#loading-img {
  margin-top: 17rem;
  height: 100px;
  width: 100px;
  z-index: 100;
}

#title {
  padding-top: 3%;
}

#expertise,
#projects {
  padding: 5.5rem 0;
}

#trailer {
  height: 200px;
  width: 200px;
  /* background: linear-gradient(to right, aquamarine, mediumpurple); */
  background: #2F58CD;
  border-radius: 100%;
  filter: blur(130px);

  /* for starting position */
  position: fixed;
  left: 0px;
  top: 0px;
  z-index: -100;


  pointer-events: none;
  opacity: 0;
  transition: opicity 500ms ease;
}

body:hover>#trailer {
  opacity: 1;
}

/* Title Section */

header {
  position: fixed;
  width: 100%;
}

.__navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  animation: profile-animation 1s;
}

nav>ul {
  background-color: rgba(53, 53, 53, 0.4);
  backdrop-filter: blur(20px) saturate(3);
  border-radius: 100px;
  padding: 1rem;
  color: white;
  font-weight: 100;
}

nav li {
  margin: 0 8px;
  letter-spacing: 1.4px;
}

nav a {
  text-decoration: none;
  color: white;
}

nav a:hover {
  color: white;
}

.heading {
  padding: 10rem 0;
}

.title-text {
  animation-name: profile-animation;
  animation-duration: 3s;
  line-height: 1.5;
  padding-top: 5rem
}

.hire-resume-button {
  animation: profile-animation 3s;
}

.developer-image {
  height: 16rem;
  width: 16rem;
  animation: profile-animation 3s;
}

.developer-image:hover {
  opacity: 0.5;
}

/* Skill Section */
.skill-img {
  height: 5rem;
  width: 5rem;
  margin: 20px;
}

.skill-img:hover {
  opacity: 0.5;
}

/* Project Section */
.project-img {
  height: 8rem;
  width: 15rem;
  margin-bottom: 5px;
}

.url-text {
  text-decoration: none;
  color: #5b5b5b;
}

.url-text:hover {
  color: #5b5b5b;
}

.project-img:hover {
  opacity: 0.5;
}

@media (max-width: 991px) {
  #trailer {
    display: none;
  }

  .project-img {
    height: 7rem;
    width: 12rem;
  }


  .skill-img {
    height: 4rem;
    width: 4rem;
  }

  .developer-image {
    height: 15.5rem;
    width: 15.5rem;
  }
}

@media (max-width: 767px) {
  .developer-image {
    margin-top: 50px;
  }

  .heading {
    padding: 0;
  }

  .center-image,
  .title-text {
    text-align: center;
  }

  .hire-resume-button {
    margin-top: 20px;
  }
}

@keyframes profile-animation {
  from {
    opacity: 0;
  }

  to {
    opacity: 100;
  }
}

